# CL-rust

./: Cargo.toml
ch01/hello/: Cargo.toml
ch01/hello/tests/: cli.rs
ch02/echor/src/: main.rs
ch02/echor/tests/: cli.rs
